--- a/features/hotel/src/main/res/layout/hotel_fragment.xml
+++ b/features/hotel/src/main/res/layout/hotel_fragment.xml
@@ -437,6 +437,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
+            android:id="@+id/choose_room_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
