--- a/features/hotel/src/main/res/layout/hotel_fragment.xml
+++ b/features/hotel/src/main/res/layout/hotel_fragment.xml
@@ -43,13 +43,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@drawable/hotel_img_1" />
+                android:src="@drawable/hotel_img_1"
+                android:contentDescription="TODO" />
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@drawable/hotel_img_1" />
+                android:src="@drawable/hotel_img_1"
+                android:contentDescription="TODO" />
 
         </ViewFlipper>
 
