--- a/features/booking/src/main/res/layout/booking_fragment.xml
+++ b/features/booking/src/main/res/layout/booking_fragment.xml
@@ -28,4 +28,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/back_button" />
 
+    <Button
+        android:id="@+id/pay_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/sf_pro_display_regular"
+        android:text="Оплатить 198 036 Р"
+        android:layout_marginBottom="12dp"
+        android:textColor="#FFFFFF"
+        app:backgroundTint="#FF0D72FF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
