--- a/features/room/src/main/res/layout/room_fragment.xml
+++ b/features/room/src/main/res/layout/room_fragment.xml
@@ -21,19 +21,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
             android:contentDescription="TODO" />
 
         <TextView
             android:id="@+id/hotel_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/sf_pro_display_regular"
             android:text="Steigenberger Makadi"
             android:textColor="#000000"
-            android:fontFamily="@font/sf_pro_display_regular"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/back_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/back_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     
